@@ -18,8 +18,8 @@ Version 2.16
   13566, 13583, 13618, 13637, 13656, 13658, 13673, 13691, 13695, 13704,
   13706, 13726, 13738, 13760, 13761, 13786, 13792, 13806, 13824, 13840,
   13841, 13844, 13846, 13851, 13852, 13854, 13871, 13879, 13883, 13892,
-  13910, 13911, 13912, 13913, 13915, 13916, 13917, 13918, 13919, 13920,
-  13921, 13926, 13928, 13938
+  13908, 13910, 13911, 13912, 13913, 13915, 13916, 13917, 13918, 13919,
+  13920, 13921, 13926, 13928, 13938
 
 * ISO C11 support:
 
